# spinny-test

./: Cargo.toml  README.md  index.html  style.css
.github/workflows/: continuous_deployment.yml
src/: main.rs
