[package]
name = "spinny-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
lunar-engine = {git="https://github.com/ciubix8513/lunar-engine.git"}
lunar-engine-derive= {git="https://github.com/ciubix8513/lunar-engine.git"}

[features]
webgl = ["lunar-engine/webgl"]
